# ai-fast-game

./: README.md  hello.py  pyproject.toml
makemore-bigram/: makemore-backprop-ninja.ipynb  makemore-mlp-more.ipynb  makemore-mlp.ipynb  makemore-trigram.ipynb  makemore-wavenet.ipynb  makemore.ipynb
micrograd/: micrograd.ipynb
nanogpt/: gpt-dev.ipynb  train.py  v2.py
